kyma-basics/assets/busola.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  ports:
  - name: http
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: busola
  name: web
spec:
  ports:
  - name: http-web
    port: 8080
    targetPort: 8080
  selector:
    app: busola
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - env:
        - name: ADDRESS
          value: 0.0.0.0
        image: eu.gcr.io/kyma-project/busola-backend:PR-1943
        imagePullPolicy: Always
        name: backend
        ports:
        - containerPort: 3001
          name: http-backend
          protocol: TCP
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 128M
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/config-yaml
          name: config
      volumes:
      - configMap:
          items:
          - key: config
            path: config.yaml
          name: busola-config
        name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busola
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busola
  template:
    metadata:
      labels:
        app: busola
    spec:
      containers:
      - image: eu.gcr.io/kyma-project/busola-web:PR-1913
        imagePullPolicy: Always
        name: busola
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 21Mi
        volumeMounts:
        - mountPath: /app/core/assets/config-yaml
          name: config
      volumes:
      - configMap:
          items:
          - key: config
            path: config.yaml
          name: busola-config
        name: config
