kyma-basics/assets/example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-hello
  name: go-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-hello
  template:
    metadata:
      labels:
        app: go-hello
    spec:
      containers:
      - image: pbochynski/go-hello:0.0.1
        imagePullPolicy: Always
        name: go-hello
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-hello
  name: go-hello
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: go-hello
  type: ClusterIP
